# jaqt

./: CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CREDITS  PROJECT  README.md  info.qrc
cmake/: BuildDocumentation.cmake  BuildModule.cmake  BuildTestCases.cmake  FindQDoc.cmake  ImportExternalLibrary.cmake  ImportExternalLibrary.cmake.bak  ModuleAPI.cmake  ctkMacroSimpleTest.cmake  useWCL.cmake
cmake/in/: Doxyfile.in  DoxyfileModule.in  LibraryConfig.cmake.in  ModuleConfig.cmake.in  config.qdocconf.in  helpcollection.qhcp.in  resources.rc.in  wclConfig.cmake.in  wclConfigVersion.cmake.in
cmake/macros/: ClearManifestMacro.cmake  GenerateEmbeddedManifestMacro.cmake
data/icons/default/: default.qrc
doc/: CMakeLists.txt  config.qdocconf.in  config.qdocconf.in.novale  prueba.qdoc
doc/global/: config.qdocconf  manifest-meta.qdocconf  qt-module-defaults-offline.qdocconf
doc/global/template/style/: offline.css
examples/: CMakeLists.txt
examples/bar/: CMakeLists.txt  bar.cpp
lang/: CMakeLists.txt  es_ES.ts  fr_FR.ts  source.ts
src/: CMakeLists.txt
src/foo/: CMakeLists.txt  foo.cpp  foo.h  manifest.cmake
src/foo/Testing/: CMakeLists.txt  testfoo.cpp  testfoo2.cpp
src/jaqt/: CMakeLists.txt  Mainwindow.qdoc  abstractCommand.h  abstractdocument.cpp  abstractdocument.h  documentManager.cpp  documentManager.h  documentManagerModel.cpp  documentManagerModel.h  helpbrowser.cpp  helpbrowser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_p.cpp  mainwindow_p.h  manifest.cmake
src/jaqt/Documentation/: doc.qdocconf
src/jaqt/settings/: AppSettings.cpp  AppSettings.h  defaultSettings.cpp  defaultSettings.h
src/jaqt/widgets/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui
